# wavevid

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  pyproject.toml
examples/: 01-basic.sh  02-with-avatar.sh  03-with-subtitles.sh  04-instagram-reels.sh  05-youtube-landscape.sh  06-podcast-full.sh  07-audio-only.sh  08-high-quality.sh  09-custom-colors.sh  10-text-replacements.sh  README.md
scripts/: generate_backgrounds.py
src/wavevid/: __init__.py  animations.py  audio.py  backgrounds.py  cli.py  generate_end_screen.py  renderer.py  transcribe.py
src/wavevid/sounds/Lounge Jazz Intro/: Info & Contacts.txt
src/wavevid/visualizers/: __init__.py  bars.py  base.py  particles.py  radial.py  spectrum.py  waveform.py
